--- a/project_3/.gitignore
+++ b/project_3/.gitignore
@@ -2,11 +2,14 @@ project_3.cache/
 project_3.gen/
 project_3.hw/
 project_3.ip_user_files/
-project_3.run/
+project_3.runs/
 project_3.sim/
 project_3.xpr
 *.jou
 *.log
 *.str
+*.backup.jou
+*.backup.log
+
 
 
